@@ -4,6 +4,8 @@ Changes
 0.10.1 (unreleased)
 ~~~~~~~~~~~~~~~~~~~
 
+- Standalone app mode uses the Zope exception formatter for easier debugging.
+
 
 0.10.0 (2012-02-29)
 ~~~~~~~~~~~~~~~~~~~
